ini tampilan aja

--- a/harian.html
+++ b/harian.html
@@ -41,6 +41,7 @@
                 <a href="#">Pendidikan</a>
                 <ul class="sub-menu">
                     <li><a href="microweb/teknokrat.html">Universitas Teknokrat Indonesia</a></li>
+                    <li><a href="microweb/unila.html">Universitas Teknokrat Indonesia</a></li>
                     <li><a href="#">SMP</a></li>
                     <li><a href="#">SMA</a></li>
                     <li><a href="#">Perguruan Tinggi</a></li>
