--- a/microweb/teknokrat.html
+++ b/microweb/teknokrat.html
@@ -42,8 +42,8 @@
             <li class="has-sub">
                 <a href="#">Pendidikan</a>
                 <ul class="sub-menu">
-                    <li><a href="microweb/teknokrat.html">Universitas Teknokrat Indonesia</a></li>
-                    <li><a href="#">SMP</a></li>
+                    <li><a href="teknokrat.html">Universitas Teknokrat Indonesia</a></li>
+                    <li><a href="unila.html">Universitas Lampung</a></li>
                     <li><a href="#">SMA</a></li>
                     <li><a href="#">Perguruan Tinggi</a></li>
                 </ul>
@@ -74,9 +74,9 @@
                 <li><a href="#"><i class="bi bi-camera-video"></i> Vidio</a></li>
                 <li><a href="#"><i class="bi bi-mic"></i> Podcase</a></li>
                 <li><a href="#"><i class="bi bi-newspaper"></i> Infografik</a></li></br>
-                <li><a href="harian.html"><i class="bi bi-calendar3"></i> Harian</a></li>
+                <li><a href="../harian.html"><i class="bi bi-calendar3"></i> Harian</a></li>
                 <li><a href="#"><i class="bi bi-calendar3"></i> Mingguan</a></li>
-                <li><a href="index.html"><i class="bi bi-house-door"></i> Beranda</a></li>
+                <li><a href="../index.html"><i class="bi bi-house-door"></i> Beranda</a></li>
             </ul>
         </div>
     </div>
