ini tampilan aja

--- a/microweb/unila.html
+++ b/microweb/unila.html
@@ -154,7 +154,7 @@
 
 
     <script src="../js/unila/unila.js"></script>
-    <script src="../js/teknokrat/unila.pendidikan.js"></script>
+    <script src="../js/unila/unila.pendidikan.js"></script>
     <script src="../js/scrip.js"></script>
     <script src="../js/navbar.js"></script>
     <script src="../js/unila/terbaru.js"></script>
