--- a/microweb/unila.html
+++ b/microweb/unila.html
@@ -97,8 +97,10 @@
                     <img src="../image/PENERIMAAN-TEKNOKRAT.jpg" alt="image" class="img-iklan-microweb">
                 </a>
             </div> -->
-            <div class="Pendidikan">
-
+            <h2>PRESTASI MAHASISWA</h2>
+            <div class="prestasi">
+                <div class="prestasi-terbaru"></div>
+                <div class="prestasi-lanjutan"></div>
             </div>
         </div>
         <div class="iklan">
@@ -158,6 +160,7 @@
     <script src="../js/scrip.js"></script>
     <script src="../js/navbar.js"></script>
     <script src="../js/unila/terbaru.js"></script>
+    <script src="../js/unila/pendidikan.lanjutan.js"></script>
 </body>
 
 </html>
