--- a/microweb/teknokrat.html
+++ b/microweb/teknokrat.html
@@ -101,7 +101,7 @@
 
             </div>
         </div>
-        <div class="iklan">
+        <div class="iklan-parent">
             <h2>KORAN DIGITAL</h2>
             <div class="tagar">
                 <a href="../harian.html">
