--- a/microweb/unila.html
+++ b/microweb/unila.html
@@ -103,7 +103,7 @@
                 <div class="prestasi-lanjutan"></div>
             </div>
         </div>
-        <div class="iklan">
+        <div class="iklan-parent">
             <h2>KORAN DIGITAL</h2>
             <div class="tagar">
                 <a href="../harian.html">
