--- a/microweb/berita.ubl.html
+++ b/microweb/berita.ubl.html
@@ -8,9 +8,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="halaman.css">
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="image/logo.png" type="image/png">
+    <link rel="stylesheet" href="../halaman.css">
+    <link rel="stylesheet" href="../style.css">
+    <link rel="icon" href="../image/logo.png" type="image/png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <title>Lampost</title>
 </head>
@@ -18,14 +18,14 @@
 <body>
     <nav class="navbar-main">
         <div class="logo">
-            <img src="image/lampost300.png (1).webp" alt="image" class="logo-img">
+            <img src="../image/lampost300.png (1).webp" alt="image" class="logo-img">
             <ul>
                 <li><a href="#" id="btnMenu">
                         <i class="bi bi-list"></i> Menu
                     </a></li>
-                <li><a href="harian.html">Harian</a></li>
+                <li><a href="../harian.html">Harian</a></li>
                 <li><a href="#">Mingguan</a></li>
-                <li><a href="index.html">Beranda</a></li>
+                <li><a href="../index.html">Beranda</a></li>
             </ul>
         </div>
         <div class="button-user">
@@ -45,9 +45,8 @@
             <li class="has-sub">
                 <a href="#">Pendidikan</a>
                 <ul class="sub-menu">
-                    <li><a href="microweb/teknokrat.html">Universitas Teknokrat Indonesia</a></li>
-                    <li><a href="microweb/unila.html">Universitas Lampung</a></li>
-                    <li><a href="#">SMP</a></li>
+                    <li><a href="teknokrat.html">Universitas Teknokrat Indonesia</a></li>
+                    <li><a href="unila.html">Universitas Lampung</a></li>
                     <li><a href="#">SMA</a></li>
                     <li><a href="#">Perguruan Tinggi</a></li>
                 </ul>
@@ -100,7 +99,7 @@
 
             <div class="isi-berita"></div>
 
-            <a href="index.html" class="baca-selengkapnya">
+            <a href="../index.html" class="baca-selengkapnya">
                 Baca berita terkait lainnya
             </a>
         </div>
@@ -131,7 +130,7 @@
                 <center>
                     <p>Affiliated with:</p>
                 </center>
-                <img src="image/media.webp" alt="Logo">
+                <img src="../image/lampost300.png (1).webp" alt="Logo">
             </div>
 
             <div class="footer-center">
@@ -158,10 +157,10 @@
             <small>© 2025 Lampost.co - Media Group. All rights reserved.</small>
         </div>
     </footer>
-    <script src="js/voice.js"></script>
-    <script src="js/harian.js"></script>
-    <script src="js/scrip.js"></script>
-    <script src="js/navbar.js"></script>
+    <script src="../js/voice.js"></script>
+    <script src="../js/ubl/detail.ubl.js"></script>
+    <script src="../js/scrip.js"></script>
+    <script src="../js/navbar.js"></script>
 </body>
 
 </html>
