--- a/harian.html
+++ b/harian.html
@@ -3,6 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
+        rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="image/logo.png" type="image/png">
@@ -84,7 +88,7 @@
             <h2>Harian</h2>
             <p>Berita mendalam harian yang terbit sekali sehari untuk memenuhi kebutuhan informasi Anda.</p>
             <div class="card-berita">
-                
+
             </div>
             <!-- DETAIL -->
             <div class="card-detail">
