--- a/microweb/unila.html
+++ b/microweb/unila.html
@@ -3,6 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
+        rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="../beranda.css">
@@ -136,7 +140,9 @@
             </div>
 
             <div class="footer-center">
-                <center><h3>UNIVERSITAS LAMPUNG</h3></center>
+                <center>
+                    <h3>UNIVERSITAS LAMPUNG</h3>
+                </center>
                 <img src="../image/logo_unila.png" alt="image" class="logo-microweb">
             </div>
         </div>
