--- a/harian.html
+++ b/harian.html
@@ -46,7 +46,7 @@
                 <ul class="sub-menu">
                     <li><a href="microweb/teknokrat.html">Universitas Teknokrat Indonesia</a></li>
                     <li><a href="microweb/unila.html">Universitas Lampung</a></li>
-                    <li><a href="#">SMP</a></li>
+                    <li><a href="microweb/ubl.html">UBL</a></li>
                     <li><a href="#">SMA</a></li>
                     <li><a href="#">Perguruan Tinggi</a></li>
                 </ul>
