--- a/microweb/ubl.html
+++ b/microweb/ubl.html
@@ -48,7 +48,7 @@
                 <ul class="sub-menu">
                     <li><a href="teknokrat.html">Universitas Teknokrat Indonesia</a></li>
                     <li><a href="unila.html">Universitas Lampung</a></li>
-                    <li><a href="#">SMA</a></li>
+                    <li><a href="ubl.html">UBL</a></li>
                     <li><a href="#">Perguruan Tinggi</a></li>
                 </ul>
             </li>
