--- a/microweb/ubl.html
+++ b/microweb/ubl.html
@@ -98,17 +98,16 @@
             </div>
             <div class="berita-ubl"></div>
             <center><button id="loadMore" class="load-more">LOAD MORE</button></center>
-            <h2>PRESTASI MAHASISWA</h2>
-            <div class="prestasi">
-                <div class="prestasi-terbaru"></div>
-                <div class="prestasi-lanjutan"></div>
+            <div class="ubl-buttom">
+                <div class="ubl-terbaru"></div>
+                <div class="ubl-lanjutan"></div>
             </div>
         </div>
         <div class="iklan-parent">
             <h2>KORAN DIGITAL</h2>
             <div class="tagar">
                 <a href="../harian.html">
-                    <img src="../image/epaper-tekno.jpg" alt="img" class="epaper-image">
+                    <img src="../image/epaper-tekno.jpg" alt="img" class="epaper-image" id="epeper-microweb">
                 </a>
             </div>
         </div>
@@ -159,6 +158,8 @@
     <script src="../js/navbar.js"></script>
     <script src="../js/ubl/ubl.utama.js"></script>
     <script src="../js/ubl/ubl.js"></script>
+    <script src="../js/ubl/ubl.terbaru.js"></script>
+    <script src="../js/ubl/ubl.lanjutan.js"></script>
 </body>
 
 </html>
