--- a/microweb/unila.html
+++ b/microweb/unila.html
@@ -111,7 +111,7 @@
             <h2>KORAN DIGITAL</h2>
             <div class="tagar">
                 <a href="../harian.html">
-                    <img src="../image/epaper-unila.jpg" alt="img" class="epaper-image">
+                    <img src="../image/epaper-unila.jpg" alt="img" class="epaper-image" id="epeper-microweb">
                 </a>
             </div>
             <div class="terbaru">
