--- a/microweb/teknokrat.html
+++ b/microweb/teknokrat.html
@@ -109,7 +109,7 @@
             <h2>KORAN DIGITAL</h2>
             <div class="tagar">
                 <a href="../harian.html">
-                    <img src="../image/epaper-tekno.jpg" alt="img" class="epaper-image">
+                    <img src="../image/epaper-tekno.jpg" alt="img" class="epaper-image" id="epeper-microweb">
                 </a>
             </div>
             <div class="terbaru">
