ini tampilan aja

--- a/microweb/teknokrat.html
+++ b/microweb/teknokrat.html
@@ -96,6 +96,7 @@
             <div class="home">
 
             </div>
+            <center><button id="loadMore" class="load-more">LOAD MORE</button></center>
             <div class="iklan-microweb">
                 <a href="#">
                     <img src="../image/PENERIMAAN-TEKNOKRAT.jpg" alt="image" class="img-iklan-microweb">
