ini tampilan aja

--- a/microweb/unila.html
+++ b/microweb/unila.html
@@ -96,11 +96,7 @@
             <div class="home">
 
             </div>
-            <!-- <div class="iklan-microweb">
-                <a href="#">
-                    <img src="../image/PENERIMAAN-TEKNOKRAT.jpg" alt="image" class="img-iklan-microweb">
-                </a>
-            </div> -->
+            <center><button id="loadMore" class="load-more">LOAD MORE</button></center>
             <h2>PRESTASI MAHASISWA</h2>
             <div class="prestasi">
                 <div class="prestasi-terbaru"></div>
