ini tampilan aja

--- a/microweb/berita.teknokrat.html
+++ b/microweb/berita.teknokrat.html
@@ -88,7 +88,7 @@
             <h1 class="judul-berita"></h1>
 
             <p class="meta-berita">
-                Oleh <strong>Lampost</strong> |
+                Oleh <strong id="editor">Lampost</strong> |
                 <span id="tanggal"></span>
                 <button id="voiceToggle" class="voice-btn">
                     <i class="bi bi-volume-up"></i>
