ini tampilan aja

--- a/microweb/berita.ubl.html
+++ b/microweb/berita.ubl.html
@@ -10,6 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../halaman.css">
     <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../microweb.css">
     <link rel="icon" href="../image/logo.png" type="image/png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <title>Lampost</title>
@@ -124,24 +125,24 @@
             <a href="https://x.com/lampungpost_"><i class="bi bi-twitter-x"></i></i>Twitter</a>
             <a href="https://www.tiktok.com/@lampungpost_official"><i class="bi bi-tiktok"></i>Tiktok</a>
         </div>
-        <div class="footer-container">
+        <div class="footer-microweb">
 
             <div class="footer-left">
                 <center>
-                    <p>Affiliated with:</p>
+                    <h3>Affiliated with:</h3>
                 </center>
                 <img src="../image/lampost300.png (1).webp" alt="Logo">
+                <p>Microsite ini adalah laman berita kerja sama Harian Umum Lampung Post dengan Universitas Teknokrat
+                    Indonesia. Lampost.co adalah situs berita yang diterbitkan oleh PT. Suara Nada Alam Indah. NIB :
+                    9120102863787 yang berkedudukan di Lampung, tepatnya Gedung Lampung Post Jalan Soekarno-Hatta No.
+                    108 Rajabasa, Bandar Lampung.</p>
             </div>
 
             <div class="footer-center">
-                <h4>Sitemap</h4>
-                <a href="#">Beranda</a>
-                <a href="#">Tentang Kami</a>
-                <a href="#">Compro</a>
-                <a href="#">Ilkan</a>
-                <a href="#">Microsite</a>
-                <a href="#">RRS</a>
-                <a href="#">Pedoman Media Siber</a>
+                <center>
+                    <h3>UNIVERSITAS BANDAR LAMPUNG</h3>
+                </center>
+                <img src="../image/logo-UBL-white.png" alt="image" class="logo-microweb">
             </div>
         </div>
 
