--- a/halaman.html
+++ b/halaman.html
@@ -158,8 +158,8 @@
             <small>© 2025 Lampost.co - Media Group. All rights reserved.</small>
         </div>
     </footer>
+    <script src="js/beranda/detail.js"></script>
     <script src="js/voice.js"></script>
-    <script src="js/detail.js"></script>
     <script src="js/scrip.js"></script>
     <script src="js/navbar.js"></script>
 </body>
