--- a/harian.html
+++ b/harian.html
@@ -160,7 +160,7 @@
 
     <script src="js/scrip.js"></script>
     <script src="js/api.js"></script>
-    <script src="js/berita-left.js"></script>
+    <script src="js/epaper/berita-left.js"></script>
     <script src="js/navbar.js"></script>
 </body>
 
