--- a/index.html
+++ b/index.html
@@ -189,19 +189,19 @@
     </footer>
 
 
-    <script src="js/olahraga.js"></script>
-    <script src="js/scrip.js"></script>
     <script src="js/api.js"></script>
-    <script src="js/hiburan.js"></script>
-    <script src="js/hukum.js"></script>
-    <script src="js/terbaru.js"></script>
-    <script src="js/populer.js"></script>
-    <script src="js/humaniora.js"></script>
-    <script src="js/opini.js"></script>
-    <script src="js/berita-left.js"></script>
     <script src="js/navbar.js"></script>
-    <script src="js/ekonomi.js"></script>
-    <script src="js/teknologi.js"></script>
+    <script src="js/beranda/olahraga.js"></script>
+    <script src="js/beranda/scrip.js"></script>
+    <script src="js/beranda/hiburan.js"></script>
+    <script src="js/beranda/hukum.js"></script>
+    <script src="js/beranda/terbaru.js"></script>
+    <script src="js/beranda/populer.js"></script>
+    <script src="js/beranda/humaniora.js"></script>
+    <script src="js/beranda/opini.js"></script>
+    <script src="js/beranda/berita-left.js"></script>
+    <script src="js/beranda/ekonomi.js"></script>
+    <script src="js/beranda/teknologi.js"></script>
 </body>
 
 </html>
