--- a/index.html
+++ b/index.html
@@ -190,6 +190,7 @@
 
 
     <script src="js/api.js"></script>
+    <script src="js/scrip.js"></script>
     <script src="js/navbar.js"></script>
     <script src="js/beranda/olahraga.js"></script>
     <script src="js/beranda/scrip.js"></script>
