--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
                     <li><a href="microweb/teknokrat.html">Universitas Teknokrat Indonesia</a></li>
                     <li><a href="microweb/unila.html">Universitas Lampung</a></li>
                     <li><a href="microweb/ubl.html">UBL</a></li>
-                    <li><a href="#">SMA</a></li>
-                    <li><a href="#">Perguruan Tinggi</a></li>
+                    <li><a href="microweb/stiab.html">STIAB</a></li>
                 </ul>
             </li>
             <li><a href="#">Ekonomi</a></li>
