--- a/microweb/berita.stiab.html
+++ b/microweb/berita.stiab.html
@@ -8,10 +8,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../halaman.css">
     <link rel="stylesheet" href="../style.css">
-    <link rel="stylesheet" href="../beranda.css">
-    <link rel="stylesheet" href="../microweb.css">
     <link rel="icon" href="../image/logo.png" type="image/png">
+    <link rel="stylesheet" href="../microweb.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <title>Lampost</title>
 </head>
@@ -49,7 +49,7 @@
                     <li><a href="teknokrat.html">Universitas Teknokrat Indonesia</a></li>
                     <li><a href="unila.html">Universitas Lampung</a></li>
                     <li><a href="ubl.html">UBL</a></li>
-                    <li><a href="stiab.html">STIAB</a></li>
+                    <li><a href="stiab.html">STIAB </a></li>
                 </ul>
             </li>
             <li><a href="#">Ekonomi</a></li>
@@ -67,7 +67,7 @@
     <!-- Sidebar -->
     <div id="sidebar" class="sidebar">
         <center>
-            <h2>MENU</h2>
+            <h2>Menu</h2>
         </center>
         <div class="search-sidebar">
             <input type="search" class="search-input" placeholder="Cari Artikel Disini" aria-label="Search">
@@ -84,34 +84,37 @@
             </ul>
         </div>
     </div>
-    <div class="bener">
-        <img src="../image/unila-banner.gif" alt="img" class="gif-tekno">
-    </div>
-    <div class="container-microweb">
-        <div class="berita-microweb">
-            <h2>BERITA TERKINI</h2>
-            <div class="berita-terbaru">
+    <div class="container">
+        <div class="berita" id="berita">
+            <h1 class="judul-berita"></h1>
 
-            </div>
-            <div class="home">
+            <p class="meta-berita">
+                Oleh <strong id="editor">Lampost</strong> |
+                <span id="tanggal"></span>
+                <button id="voiceToggle" class="voice-btn">
+                    <i class="bi bi-volume-up"></i>
+                </button>
+            </p>
 
-            </div>
-            <center><button id="loadMore" class="load-more">LOAD MORE</button></center>
-            <h2>PRESTASI MAHASISWA</h2>
-            <div class="prestasi">
-                <div class="prestasi-terbaru"></div>
-                <div class="prestasi-lanjutan"></div>
-            </div>
+            <img class="gambar-berita">
+
+            <div class="isi-berita"></div>
+
+            <a href="../index.html" class="baca-selengkapnya">
+                Baca berita terkait lainnya
+            </a>
         </div>
-        <div class="iklan-parent">
-            <h2>KORAN DIGITAL</h2>
+
+
+        <div class="iklan">
             <div class="tagar">
-                <a href="../harian.html">
-                    <img src="../image/epaper-unila.jpg" alt="img" class="epaper-image" id="epeper-microweb">
-                </a>
-            </div>
-            <div class="terbaru">
-                <h2>BERITA TERKINI</h2>
+                <h3>TOPIK TRENDING</h3>
+                <p>#Banjir Sumatra</p>
+                <p>#Muzakir Manaf</p>
+                <p>#Makan Bergizi Gratis</p>
+                <p>#Purbaya Yudhi Sadewa</p>
+                <p>#Akal ImitasiMuzakir Manaf</p>
+                <p>#Prabowo</p>
             </div>
         </div>
     </div>
@@ -137,9 +140,9 @@
 
             <div class="footer-center">
                 <center>
-                    <h3>UNIVERSITAS LAMPUNG</h3>
+                    <h3>STIAB JINARAKKHITA</h3>
                 </center>
-                <img src="../image/logo_unila.png" alt="image" class="logo-microweb">
+                <img src="../image/STIAB-JINARAKKHITA.png" alt="image" class="logo-microweb">
             </div>
         </div>
 
@@ -155,14 +158,10 @@
             <small>© 2025 Lampost.co - Media Group. All rights reserved.</small>
         </div>
     </footer>
-
-
-    <script src="../js/unila/unila.js"></script>
-    <script src="../js/unila/unila.pendidikan.js"></script>
+    <script src="../js/voice.js"></script>
+    <script src="../js/STIAB/detail.staiab.js"></script>
     <script src="../js/scrip.js"></script>
     <script src="../js/navbar.js"></script>
-    <script src="../js/unila/terbaru.js"></script>
-    <script src="../js/unila/pendidikan.lanjutan.js"></script>
 </body>
 
 </html>
