--- a/microweb/stiab.html
+++ b/microweb/stiab.html
@@ -84,34 +84,31 @@
             </ul>
         </div>
     </div>
-    <div class="bener">
-        <img src="../image/unila-banner.gif" alt="img" class="gif-tekno">
-    </div>
     <div class="container-microweb">
         <div class="berita-microweb">
             <h2>BERITA TERKINI</h2>
             <div class="berita-terbaru">
 
             </div>
-            <div class="home">
+            <div class="home-staiab">
 
             </div>
             <center><button id="loadMore" class="load-more">LOAD MORE</button></center>
-            <h2>PRESTASI MAHASISWA</h2>
-            <div class="prestasi">
-                <div class="prestasi-terbaru"></div>
-                <div class="prestasi-lanjutan"></div>
+            <div class="Pendidikan">
+
             </div>
         </div>
         <div class="iklan-parent">
             <h2>KORAN DIGITAL</h2>
             <div class="tagar">
                 <a href="../harian.html">
-                    <img src="../image/epaper-unila.jpg" alt="img" class="epaper-image" id="epeper-microweb">
+                    <img src="../image/epaper-tekno.jpg" alt="img" class="epaper-image" id="epeper-microweb">
                 </a>
             </div>
             <div class="terbaru">
                 <h2>BERITA TERKINI</h2>
+                <div class="stiab-terbaru"></div>
+                <div class="akademik"></div>
             </div>
         </div>
     </div>
@@ -137,9 +134,9 @@
 
             <div class="footer-center">
                 <center>
-                    <h3>UNIVERSITAS LAMPUNG</h3>
+                    <h3>STIAB JINARAKKHITA</h3>
                 </center>
-                <img src="../image/logo_unila.png" alt="image" class="logo-microweb">
+                <img src="../image/STIAB-JINARAKKHITA.png" alt="image" class="logo-microweb">
             </div>
         </div>
 
@@ -157,12 +154,11 @@
     </footer>
 
 
-    <script src="../js/unila/unila.js"></script>
-    <script src="../js/unila/unila.pendidikan.js"></script>
+    <script src="../js/STIAB/staiab.js"></script>
+    <script src="../js/STIAB/stiab.utama.js"></script>
+    <script src="../js/STIAB/akademik.js"></script>
     <script src="../js/scrip.js"></script>
     <script src="../js/navbar.js"></script>
-    <script src="../js/unila/terbaru.js"></script>
-    <script src="../js/unila/pendidikan.lanjutan.js"></script>
 </body>
 
 </html>
