--- a/microweb/teknokrat.html
+++ b/microweb/teknokrat.html
@@ -49,7 +49,7 @@
                     <li><a href="teknokrat.html">Universitas Teknokrat Indonesia</a></li>
                     <li><a href="unila.html">Universitas Lampung</a></li>
                     <li><a href="ubl.html">UBL</a></li>
-                    <li><a href="#">Perguruan Tinggi</a></li>
+                    <li><a href="stiab.html">STIAB</a></li>
                 </ul>
             </li>
             <li><a href="#">Ekonomi</a></li>
