--- a/kategori/vidio/detail.bedah-tajuk.html
+++ b/kategori/vidio/detail.bedah-tajuk.html
@@ -8,10 +8,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../style.css">
-    <link rel="stylesheet" href="../beranda.css">
-    <link rel="stylesheet" href="../microweb.css">
-    <link rel="icon" href="../image/logo.png" type="image/png">
+    <link rel="stylesheet" href="../../halaman.css">
+    <link rel="stylesheet" href="../../style.css">
+    <link rel="icon" href="../../image/logo.png" type="image/png">
+    <link rel="stylesheet" href="../../microweb.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <title>Lampost</title>
 </head>
@@ -19,14 +19,14 @@
 <body>
     <nav class="navbar-main">
         <div class="logo">
-            <img src="../image/lampost300.png (1).webp" alt="image" class="logo-img">
+            <img src="../../image/lampost300.png (1).webp" alt="image" class="logo-img">
             <ul>
                 <li><a href="#" id="btnMenu">
                         <i class="bi bi-list"></i> Menu
                     </a></li>
-                <li><a href="../harian.html">Harian</a></li>
+                <li><a href="../../harian.html">Harian</a></li>
                 <li><a href="#">Mingguan</a></li>
-                <li><a href="../index.html">Beranda</a></li>
+                <li><a href="../../index.html">Beranda</a></li>
             </ul>
         </div>
         <div class="button-user">
@@ -46,10 +46,10 @@
             <li class="has-sub">
                 <a href="#">Pendidikan</a>
                 <ul class="sub-menu">
-                    <li><a href="teknokrat.html">Universitas Teknokrat Indonesia</a></li>
-                    <li><a href="unila.html">Universitas Lampung</a></li>
-                    <li><a href="ubl.html">UBL</a></li>
-                    <li><a href="stiab.html">STIAB</a></li>
+                    <li><a href="../../microweb/teknokrat.html">Universitas Teknokrat Indonesia</a></li>
+                    <li><a href="../../microweb/unila.html">Universitas Lampung</a></li>
+                    <li><a href="../../microweb/ubl.html">UBL</a></li>
+                    <li><a href="../../microweb/stiab.html">STIAB</a></li>
                 </ul>
             </li>
             <li><a href="#">Ekonomi</a></li>
@@ -58,15 +58,7 @@
             <li><a href="#">Investigasi</a></li>
             <li><a href="#">Cek Fakta</a></li>
             <li><a href="#">Tokoh</a></li>
-            <li class="has-sub">
-                <a href="#">Vidio</a>
-                <ul class="sub-menu">
-                    <li><a href="#">Breking New</a></li>
-                    <li><a href="../kategori/vidio/bedah-tajuk.html">Bedah Tajuk</a></li>
-                    <li><a href="#">Economic Corner</a></li>
-                    <li><a href="#">Podcast</a></li>
-                </ul>
-            </li>
+            <li><a href="#">Newsllater</a></li>
             <li><a href="#">Info Top</a></li>
         </ul>
     </nav>
@@ -75,7 +67,7 @@
     <!-- Sidebar -->
     <div id="sidebar" class="sidebar">
         <center>
-            <h2>MENU</h2>
+            <h2>Menu</h2>
         </center>
         <div class="search-sidebar">
             <input type="search" class="search-input" placeholder="Cari Artikel Disini" aria-label="Search">
@@ -86,37 +78,43 @@
                 <li><a href="#"><i class="bi bi-camera-video"></i> Vidio</a></li>
                 <li><a href="#"><i class="bi bi-mic"></i> Podcase</a></li>
                 <li><a href="#"><i class="bi bi-newspaper"></i> Infografik</a></li></br>
-                <li><a href="../harian.html"><i class="bi bi-calendar3"></i> Harian</a></li>
+                <li><a href="../../harian.html"><i class="bi bi-calendar3"></i> Harian</a></li>
                 <li><a href="#"><i class="bi bi-calendar3"></i> Mingguan</a></li>
-                <li><a href="../index.html"><i class="bi bi-house-door"></i> Beranda</a></li>
+                <li><a href="../../index.html"><i class="bi bi-house-door"></i> Beranda</a></li>
             </ul>
         </div>
     </div>
-    <div class="container-microweb">
-        <div class="berita-microweb">
-            <h2>BERITA TERKINI</h2>
-            <div class="berita-terbaru">
+    <div class="container">
+        <div class="berita" id="berita">
+            <h1 class="judul-berita"></h1>
 
-            </div>
-            <div class="home-staiab">
+            <p class="meta-berita">
+                Oleh <strong id="editor">Lampost</strong> |
+                <span id="tanggal"></span>
+                <button id="voiceToggle" class="voice-btn">
+                    <i class="bi bi-volume-up"></i>
+                </button>
+            </p>
 
-            </div>
-            <center><button id="loadMore" class="load-more">LOAD MORE</button></center>
-            <div class="Pendidikan">
+            <img class="gambar-berita">
 
-            </div>
+            <div class="isi-berita"></div>
+
+            <a href="../index.html" class="baca-selengkapnya">
+                Baca berita terkait lainnya
+            </a>
         </div>
-        <div class="iklan-parent">
-            <h2>KORAN DIGITAL</h2>
+
+
+        <div class="iklan">
             <div class="tagar">
-                <a href="../harian.html">
-                    <img src="../image/epaper-tekno.jpg" alt="img" class="epaper-image" id="epeper-microweb">
-                </a>
-            </div>
-            <div class="terbaru">
-                <h2>BERITA TERKINI</h2>
-                <div class="stiab-terbaru"></div>
-                <div class="akademik"></div>
+                <h3>TOPIK TRENDING</h3>
+                <p>#Banjir Sumatra</p>
+                <p>#Muzakir Manaf</p>
+                <p>#Makan Bergizi Gratis</p>
+                <p>#Purbaya Yudhi Sadewa</p>
+                <p>#Akal ImitasiMuzakir Manaf</p>
+                <p>#Prabowo</p>
             </div>
         </div>
     </div>
@@ -127,24 +125,24 @@
             <a href="https://x.com/lampungpost_"><i class="bi bi-twitter-x"></i></i>Twitter</a>
             <a href="https://www.tiktok.com/@lampungpost_official"><i class="bi bi-tiktok"></i>Tiktok</a>
         </div>
-        <div class="footer-microweb">
+        <div class="footer-container">
 
             <div class="footer-left">
                 <center>
-                    <h3>Affiliated with:</h3>
+                    <p>Affiliated with:</p>
+                    <img src="../../image/media.webp" alt="Logo">
                 </center>
-                <img src="../image/lampost300.png (1).webp" alt="Logo">
-                <p>Microsite ini adalah laman berita kerja sama Harian Umum Lampung Post dengan Universitas Teknokrat
-                    Indonesia. Lampost.co adalah situs berita yang diterbitkan oleh PT. Suara Nada Alam Indah. NIB :
-                    9120102863787 yang berkedudukan di Lampung, tepatnya Gedung Lampung Post Jalan Soekarno-Hatta No.
-                    108 Rajabasa, Bandar Lampung.</p>
             </div>
 
             <div class="footer-center">
-                <center>
-                    <h3>STIAB JINARAKKHITA</h3>
-                </center>
-                <img src="../image/STIAB-JINARAKKHITA.png" alt="image" class="logo-microweb">
+                <h4>Sitemap</h4>
+                <a href="#">Beranda</a>
+                <a href="#">Tentang Kami</a>
+                <a href="#">Compro</a>
+                <a href="#">Ilkan</a>
+                <a href="#">Microsite</a>
+                <a href="#">RRS</a>
+                <a href="#">Pedoman Media Siber</a>
             </div>
         </div>
 
@@ -160,13 +158,10 @@
             <small>© 2025 Lampost.co - Media Group. All rights reserved.</small>
         </div>
     </footer>
-
-
-    <script src="../js/STIAB/staiab.js"></script>
-    <script src="../js/STIAB/stiab.utama.js"></script>
-    <script src="../js/STIAB/akademik.js"></script>
-    <script src="../js/scrip.js"></script>
-    <script src="../js/navbar.js"></script>
+    <script src="../../js/voice.js"></script>
+    <script src="../../js/vidio/detail.bedah-tajuk.js"></script>
+    <script src="../../js/scrip.js"></script>
+    <script src="../../js/navbar.js"></script>
 </body>
 
 </html>
