--- a/microweb/teknokrat.html
+++ b/microweb/teknokrat.html
@@ -58,7 +58,15 @@
             <li><a href="#">Investigasi</a></li>
             <li><a href="#">Cek Fakta</a></li>
             <li><a href="#">Tokoh</a></li>
-            <li><a href="#">Newsllater</a></li>
+            <li class="has-sub">
+                <a href="#">Vidio</a>
+                <ul class="sub-menu">
+                    <li><a href="#">Breking New</a></li>
+                    <li><a href="../kategori/vidio/bedah-tajuk.html">Bedah Tajuk</a></li>
+                    <li><a href="#">Economic Corner</a></li>
+                    <li><a href="#">Podcast</a></li>
+                </ul>
+            </li>
             <li><a href="#">Info Top</a></li>
         </ul>
     </nav>
@@ -141,8 +149,8 @@
             <div class="footer-center">
                 <center>
                     <h3>UNIVERSITAS TEKNOKRAT INDONESIA</h3>
+                    <img src="../image/logo-uti.png" alt="image" class="logo-microweb">
                 </center>
-                <img src="../image/logo-uti.png" alt="image" class="logo-microweb">
             </div>
         </div>
 
