--- a/microweb/ubl.html
+++ b/microweb/ubl.html
@@ -58,7 +58,15 @@
             <li><a href="#">Investigasi</a></li>
             <li><a href="#">Cek Fakta</a></li>
             <li><a href="#">Tokoh</a></li>
-            <li><a href="#">Newsllater</a></li>
+            <li class="has-sub">
+                <a href="#">Vidio</a>
+                <ul class="sub-menu">
+                    <li><a href="#">Breking New</a></li>
+                    <li><a href="../kategori/vidio/bedah-tajuk.html">Bedah Tajuk</a></li>
+                    <li><a href="#">Economic Corner</a></li>
+                    <li><a href="#">Podcast</a></li>
+                </ul>
+            </li>
             <li><a href="#">Info Top</a></li>
         </ul>
     </nav>
