ini tampilan aja

--- a/kategori/vidio/bedah-tajuk.html
+++ b/kategori/vidio/bedah-tajuk.html
@@ -159,6 +159,7 @@
 
 
     <script src="../../js/vidio/bedah.tajuk.js"></script>
+    <script src="../../js/vidio/terbaru.js"></script>
     <script src="../../js/scrip.js"></script>
     <script src="../../js/navbar.js"></script>
 </body>
