--- a/index.html
+++ b/index.html
@@ -51,21 +51,30 @@
                     <li><a href="microweb/stiab.html">STIAB</a></li>
                 </ul>
             </li>
-            <li><a href="#">Ekonomi</a></li>
-            <li><a href="#">Lingkungan</a></li>
-            <li><a href="#">Wawancara</a></li>
-            <li><a href="#">Investigasi</a></li>
-            <li><a href="#">Cek Fakta</a></li>
-            <li><a href="#">Tokoh</a></li>
+                        <li class="has-sub">
+                <a href="#">Kolom</a>
+                <ul class="sub-menu" id="kolom">
+                    <li><a href="kategori/opini.html">Opini</a></li>
+                    <li><a href="kategori/refleksi.html">Refleksi</a></li>
+                    <li><a href="kategori/nuansa.html">Nuansa</a></li>
+                    <li><a href="kategori/tajuk-lampung-post.html">Tajuk</a></li>
+                    <li><a href="kategori/forum-guru.html">Forum Guru</a></li>
+                </ul>
+            </li>
             <li class="has-sub">
                 <a href="#">Vidio</a>
-                <ul class="sub-menu">
+                <ul class="sub-menu" id="vidio">
                     <li><a href="#">Breking New</a></li>
                     <li><a href="kategori/vidio/bedah-tajuk.html">Bedah Tajuk</a></li>
                     <li><a href="#">Economic Corner</a></li>
                     <li><a href="#">Podcast</a></li>
                 </ul>
             </li>
+            <li><a href="#">Lingkungan</a></li>
+            <li><a href="#">Wawancara</a></li>
+            <li><a href="#">Investigasi</a></li>
+            <li><a href="#">Cek Fakta</a></li>
+            <li><a href="#">Tokoh</a></li>
             <li><a href="#">Info Top</a></li>
         </ul>
     </nav>
