--- a/kategori/vidio/bedah-tajuk.html
+++ b/kategori/vidio/bedah-tajuk.html
@@ -52,21 +52,30 @@
                     <li><a href="../../microweb/stiab.html">STIAB</a></li>
                 </ul>
             </li>
-            <li><a href="#">Ekonomi</a></li>
+            <li class="has-sub">
+                <a href="#">Kolom</a>
+                <ul class="sub-menu" id="kolom">
+                    <li><a href="../opini.html">Opini</a></li>
+                    <li><a href="../refleksi.html">Refleksi</a></li>
+                    <li><a href="../nuansa.html">Nuansa</a></li>
+                    <li><a href="../tajuk-lampung-post.html">Tajuk</a></li>
+                    <li><a href="../forum-guru.html">Forum Guru</a></li>
+                </ul>
+            </li>
+            <li class="has-sub">
+                <a href="#">Vidio</a>
+                <ul class="sub-menu" id="vidio">
+                    <li><a href="#">Breking New</a></li>
+                    <li><a href="../../kategori/vidio/bedah-tajuk.html">Bedah Tajuk</a></li>
+                    <li><a href="#">Economic Corner</a></li>
+                    <li><a href="#">Podcast</a></li>
+                </ul>
+            </li>
             <li><a href="#">Lingkungan</a></li>
             <li><a href="#">Wawancara</a></li>
             <li><a href="#">Investigasi</a></li>
             <li><a href="#">Cek Fakta</a></li>
             <li><a href="#">Tokoh</a></li>
-            <li class="has-sub">
-                <a href="#">Vidio</a>
-                <ul class="sub-menu">
-                    <li><a href="#">Breking New</a></li>
-                    <li><a href="bedah-tajuk.html">Bedah Tajuk</a></li>
-                    <li><a href="#">Economic Corner</a></li>
-                    <li><a href="#">Podcast</a></li>
-                </ul>
-            </li>
             <li><a href="#">Info Top</a></li>
         </ul>
     </nav>
@@ -116,7 +125,7 @@
             </div>
         </div>
     </div>
-        <footer class="footer">
+    <footer class="footer">
         <div class="sosmed">
             <a href="https://www.instagram.com/lampost.co/"><i class="bi bi-instagram"></i>Instagram</a>
             <a href="https://www.facebook.com/lampungpostupdate"><i class="bi bi-facebook"></i>Fecebook</a>
