--- a/kategori/vidio/detail.bedah-tajuk.html
+++ b/kategori/vidio/detail.bedah-tajuk.html
@@ -46,27 +46,36 @@
             <li class="has-sub">
                 <a href="#">Pendidikan</a>
                 <ul class="sub-menu">
-                    <li><a href="../../microweb/teknokrat.html">Universitas Teknokrat Indonesia</a></li>
+                    <li><a href="../microweb/teknokrat.html">Universitas Teknokrat Indonesia</a></li>
                     <li><a href="../../microweb/unila.html">Universitas Lampung</a></li>
                     <li><a href="../../microweb/ubl.html">UBL</a></li>
                     <li><a href="../../microweb/stiab.html">STIAB</a></li>
                 </ul>
             </li>
-            <li><a href="#">Ekonomi</a></li>
+                        <li class="has-sub">
+                <a href="#">Kolom</a>
+                <ul class="sub-menu" id="kolom">
+                    <li><a href="../opini.html">Opini</a></li>
+                    <li><a href="../refleksi.html">Refleksi</a></li>
+                    <li><a href="../nuansa.html">Nuansa</a></li>
+                    <li><a href="../tajuk-lampung-post.html">Tajuk</a></li>
+                    <li><a href="../forum-guru.html">Forum Guru</a></li>
+                </ul>
+            </li>
+            <li class="has-sub">
+                <a href="#">Vidio</a>
+                <ul class="sub-menu" id="vidio">
+                    <li><a href="#">Breking New</a></li>
+                    <li><a href="../../kategori/vidio/bedah-tajuk.html">Bedah Tajuk</a></li>
+                    <li><a href="#">Economic Corner</a></li>
+                    <li><a href="#">Podcast</a></li>
+                </ul>
+            </li>
             <li><a href="#">Lingkungan</a></li>
             <li><a href="#">Wawancara</a></li>
             <li><a href="#">Investigasi</a></li>
             <li><a href="#">Cek Fakta</a></li>
             <li><a href="#">Tokoh</a></li>
-            <li class="has-sub">
-                <a href="#">Vidio</a>
-                <ul class="sub-menu">
-                    <li><a href="#">Breking New</a></li>
-                    <li><a href="bedah-tajuk.html">Bedah Tajuk</a></li>
-                    <li><a href="#">Economic Corner</a></li>
-                    <li><a href="#">Podcast</a></li>
-                </ul>
-            </li>
             <li><a href="#">Info Top</a></li>
         </ul>
     </nav>
