ini tampilan aja

--- a/harian.html
+++ b/harian.html
@@ -70,7 +70,7 @@
                     <li><a href="#">Podcast</a></li>
                 </ul>
             </li>
-            <li><a href="#">Lingkungan</a></li>
+            <li><a href="kategori/teknologi.html">Teknologi</a></li>
             <li><a href="#">Wawancara</a></li>
             <li><a href="#">Investigasi</a></li>
             <li><a href="#">Cek Fakta</a></li>
@@ -175,7 +175,7 @@
 
 
     <script src="js/scrip.js"></script>
-    <script src="js/api.js"></script>
+    <script src="js/berita-harian.js"></script>
     <script src="js/epaper/berita-left.js"></script>
     <script src="js/navbar.js"></script>
 </body>
