--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <li><a href="microweb/stiab.html">STIAB</a></li>
                 </ul>
             </li>
-                        <li class="has-sub">
+            <li class="has-sub">
                 <a href="#">Kolom</a>
                 <ul class="sub-menu" id="kolom">
                     <li><a href="kategori/opini.html">Opini</a></li>
@@ -70,7 +70,7 @@
                     <li><a href="#">Podcast</a></li>
                 </ul>
             </li>
-            <li><a href="#">Lingkungan</a></li>
+            <li><a href="kategori/teknologi.html">Teknologi</a></li>
             <li><a href="#">Wawancara</a></li>
             <li><a href="#">Investigasi</a></li>
             <li><a href="#">Cek Fakta</a></li>
@@ -136,8 +136,8 @@
                 </div>
             </div>
             <div class="info">
-
             </div>
+            <center><button id="loadMore" class="load-more">LOAD MORE</button></center>
         </div>
         <div class="iklan">
             <h2>KORAN DIGITAL</h2>
