--- a/kategori/teknologi.html
+++ b/kategori/teknologi.html
@@ -167,7 +167,7 @@
             <small>© 2025 Lampost.co - Media Group. All rights reserved.</small>
         </div>
     </footer>
-        <script src="../js/kategori/opini.js"></script>
+        <script src="../js/kategori/teknologi.js"></script>
         <script src="../js/kategori/terbaru.js"></script>
         <script src="../js/beranda/detail.js"></script>
         <script src="../js/scrip.js"></script>
