--- a/microweb/stiab.html
+++ b/microweb/stiab.html
@@ -71,7 +71,7 @@
                     <li><a href="#">Podcast</a></li>
                 </ul>
             </li>
-            <li><a href="#">Lingkungan</a></li>
+            <li><a href="../kategori/teknologi.html">Teknologi</a></li>
             <li><a href="#">Wawancara</a></li>
             <li><a href="#">Investigasi</a></li>
             <li><a href="#">Cek Fakta</a></li>
