--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="beranda.css">
+    <link rel="stylesheet" href="beranda-overal.css">
     <link rel="icon" href="image/logo.png" type="image/png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <title>Lampost</title>
@@ -102,7 +103,7 @@
     </div>
     <div class="iklan-gambar">
         <a href="#">
-            <img src="image/baner-unioil.jpg" alt="img" class="gambar">
+            <img src="image/ads_showcase.jpg" alt="img" class="gambar">
         </a>
     </div>
     <div class="container-beranda">
@@ -122,11 +123,11 @@
             <div class="berita-terbaru">
 
             </div>
-            <div class="iklan-showcase">
+            <!-- <div class="iklan-showcase">
                 <a href="https://s.id/Lampostco">
                     <img src="image/ads_showcase.jpg" alt="img" class="iklan-image">
                 </a>
-            </div>
+            </div> -->
             <div class="berita-mobile">
                 <h2>EKONOMI DAN BISNIS</h2>
                 <div class="ekonomi">
