--- a/harian.html
+++ b/harian.html
@@ -178,6 +178,7 @@
     <script src="js/berita-harian.js"></script>
     <script src="js/epaper/berita-left.js"></script>
     <script src="js/navbar.js"></script>
+    <script src="keyfrem.js"></script>
 </body>
 
 </html>
