--- a/kategori/vidio/bedah-tajuk.html
+++ b/kategori/vidio/bedah-tajuk.html
@@ -171,6 +171,7 @@
     <script src="../../js/vidio/terbaru.js"></script>
     <script src="../../js/scrip.js"></script>
     <script src="../../js/navbar.js"></script>
+    <script src="../../keyfrem.js"></script>
 </body>
 
 </html>
