--- a/microweb/stiab.html
+++ b/microweb/stiab.html
@@ -176,6 +176,7 @@
     <script src="../js/STIAB/akademik.js"></script>
     <script src="../js/scrip.js"></script>
     <script src="../js/navbar.js"></script>
+    <script src="../keyfrem.js"></script>
 </body>
 
 </html>
