--- a/microweb/ubl.html
+++ b/microweb/ubl.html
@@ -177,6 +177,7 @@
     <script src="../js/ubl/ubl.js"></script>
     <script src="../js/ubl/ubl.terbaru.js"></script>
     <script src="../js/ubl/ubl.lanjutan.js"></script>
+    <script src="../keyfrem.js"></script>
 </body>
 
 </html>
