--- a/microweb/unila.html
+++ b/microweb/unila.html
@@ -180,6 +180,7 @@
     <script src="../js/navbar.js"></script>
     <script src="../js/unila/terbaru.js"></script>
     <script src="../js/unila/pendidikan.lanjutan.js"></script>
+    <script src="../keyfrem.js"></script>
 </body>
 
 </html>
