--- a/index.html
+++ b/index.html
@@ -220,6 +220,9 @@
     <script src="js/beranda/berita-left.js"></script>
     <script src="js/beranda/ekonomi.js"></script>
     <script src="js/beranda/teknologi.js"></script>
+    <script src="keyfrem.js"></script>
+
+    
 </body>
 
 </html>
