--- a/kategori/teknologi.html
+++ b/kategori/teknologi.html
@@ -172,6 +172,7 @@
         <script src="../js/beranda/detail.js"></script>
         <script src="../js/scrip.js"></script>
         <script src="../js/navbar.js"></script>
+        <script src="../keyfrem.js"></script>
 </body>
 
 </html>
