--- a/microweb/teknokrat.html
+++ b/microweb/teknokrat.html
@@ -182,6 +182,7 @@
     <script src="../js/scrip.js"></script>
     <script src="../js/navbar.js"></script>
     <script src="../js/teknokrat/terbaru.js"></script>
+    <script src="../keyfrem.js"></script>
 </body>
 
 </html>
