--- a/microweb/bsi.html
+++ b/microweb/bsi.html
@@ -173,6 +173,7 @@
 
     <script src="../js/scrip.js"></script>
     <script src="../js/navbar.js"></script>
+    <script src="../js/bsi/bsi.js"></script>
     <script src="../js/bsi/bsi-utama.js"></script>
     <script src="../keyfrem.js"></script>
 </body>
